--- a/SRC/ViewLayer/Theme/modern_ui_base.qss
+++ b/SRC/ViewLayer/Theme/modern_ui_base.qss
@@ -1,7 +1,7 @@
 /* Shared Base Styles */
 QWidget {
     background-color: #ecf0f1;
-    color: #2c3e50;
+    color:rgb(34, 47, 59);
     font-family: "Segoe UI", sans-serif;
     font-size: 14px;
 }
