--- a/SRC/ViewLayer/Theme/modern_ui_base.qss
+++ b/SRC/ViewLayer/Theme/modern_ui_base.qss
@@ -1,12 +1,13 @@
 /* Shared Base Styles */
 QWidget {
-    background-color: #ecf0f1;
-    color:rgb(34, 47, 59);
+    background-color:#f3efec;
+    color:rgb(45, 44, 44);
     font-family: "Segoe UI", sans-serif;
     font-size: 14px;
 }
 
 QPushButton {
+    
     border-radius: 10px;
     padding: 6px 12px;
     min-height: 30px;
@@ -14,7 +15,7 @@ QPushButton {
 }
 
 QPushButton:hover {
-    background-color: #2980b9;
+    background-color: #944e25;
 }
 
 QLineEdit, QTextEdit, QComboBox {
