--- a/SRC/ViewLayer/Theme/dropdown.qss
+++ b/SRC/ViewLayer/Theme/dropdown.qss
@@ -40,18 +40,23 @@ QMenu::section {
 }
 
 QToolButton#dropdownButton  {
-    background-color: #ecac57;
-    color: white;
-    font-weight: 600;
-    border: none;
-    border-radius: 6px;
-    padding: 4px 8px;
+    padding: 6px 10px;
+    margin: 2px 0px;
+    background-color: transparent;
+    color: #944e25;
+    font-family: "Segoe UI", sans-serif;
+    font-size: 14px;
+    font-weight: bold;
 }
+
+  
 
 QToolButton#dropdownButton::menu-indicator {
     image: none;
 }
 
 QToolButton#dropdownButton:hover {
-    background-color: #dfa448;
+    border: 1px solid #944e25;
+    padding: 6px;
+    border-radius: 10px;
 }
