--- a/SRC/ViewLayer/Theme/NavBars_ui.qss
+++ b/SRC/ViewLayer/Theme/NavBars_ui.qss
@@ -60,23 +60,24 @@ QPushButton#navButton:hover {
 
 /* כפתורי קפיצה */
 QPushButton#jumpButton {
-    background-color: #ecac57;
-    color: #fff;
+    background-color: transparent;
+    color: #944e25;
+    border: 1px solid #944e25;
     font-weight: 600;
-    border: none;
     border-radius: 6px;
     padding: 4px 6px;
 }
 
 QPushButton#jumpButton:hover {
     background-color: #dfa448;
+    color: #fff
 }
 
 QLineEdit#jumpInput {
     background-color: transparent;
     color: #944e25;
-    font-weight: 600;
-    border: 1px solid #ecac57;
+    font-weight: 800;
+    border: 1px solid #944e25;
     border-radius: 6px;
     padding: 4px 6px;
 }
