--- a/SRC/ViewLayer/Theme/modern_ui_timetable.qss
+++ b/SRC/ViewLayer/Theme/modern_ui_timetable.qss
@@ -180,3 +180,15 @@ QFrame#availableCell:hover {
     border-radius: 10px;
     border: 1px solid rgb(249, 214, 150); /* חום מדברי בינוני */
 }
+
+QFrame[customTag="manual_selected"]:hover {
+    background-color: rgb(249, 63, 63);
+    border-radius : 10px;
+    border:1px solid rgb(249, 63, 63);
+}
+
+QFrame#requestedCell {
+    background-color:rgb(162, 136, 120);
+    border:1px solid rgb(154, 106, 78);
+    border-radius: 10px;
+}
