--- a/SRC/ViewLayer/Theme/modern_ui_selection_dark.qss
+++ b/SRC/ViewLayer/Theme/modern_ui_selection_dark.qss
@@ -1,29 +1,29 @@
 QGroupBox#CourseDetails {
-    border: 1px solid #888888;
+    border: 1px solid #748D92;
     border-radius: 8px;
     padding: 6px;
-    background-color: #4c4848;
+    background-color: #2E3944;
 }
 
 QListWidget#CourseList {
     border: none;
-    background-color: #686565;
+    background-color: #212A31;
     padding: 6px;
     border-radius: 6px;
-    color: #e0e0e0;
+    color: #D3D9D4;
 }
 
 QLabel#TitleLabel {
     font-size: 18px;
     font-weight: bold;
-    color: #a0b8f7;
+    color: #124E66;
+}
+QFrame#detailsFrame {
+    border: 2px solid #124E66;
+    border-radius: 12px;
+    background-color: #2E3944;
 }
 
-QFrame#detailsFrame {
-    border: 2px solid #d1a15a;
-    border-radius: 12px;
-    background-color: #4a4545;
-}
 
 QFrame#detailRowFrame {
     padding-left: 6px;
@@ -33,53 +33,53 @@ QFrame#detailRowFrame {
 QLabel#detailLabel {
     font-size: 14px;
     font-weight: 500;
-    color: #dddddd;
+    color: #D3D9D4;
 }
 
 QFrame#courseTreeFrame {
-    border: 2px solid #d1a15a;
+    border: 2px solid #124E66;
     border-radius: 12px;
-    background-color: #695c5c;
+    background-color: #2E3944;
 }
 
 QTreeWidget#courseTree {
     font-size: 14px;
-    alternate-background-color: #5b4848;
-    background-color: #3b3b3b;
+    alternate-background-color: #2E3944;
+    background-color: #212A31;
     border: none;
-    color: #e8e8e8;
+    color: #D3D9D4;
 }
 
 QLineEdit#searchInput {
     padding: 6px 10px;
-    border: 1px solid #666666;
+    border: 1px solid #748D92;
     border-radius: 8px;
     font-size: 13px;
-    background-color: #2c2c2c;
-    color: #e0e0e0;
+    background-color: #212A31;
+    color: #D3D9D4;
 }
 
 #panelTitle {
     font-size: 18px;
     font-weight: bold;
-    color: #dddddd;
+    color: #D3D9D4;
     padding: 6px;
-    border-bottom: 1px solid #555555;
+    border-bottom: 1px solid #748D92;
 }
 
 #countLabel {
     font-size: 14px;
-    color: #bbbbbb;
+    color: #748D92;
 }
 
 #selectedTable {
-    border: 1px solid #555555;
+    border: 1px solid #748D92;
     border-radius: 10px;
-    background-color: #353535;
-    alternate-background-color: #2d2d2d;
+    background-color: #2E3944;
+    alternate-background-color: #212A31;
     font-size: 14px;
     outline: none;
-    color: #dddddd;
+    color: #D3D9D4;
 }
 
 #selectedTable::item {
@@ -88,36 +88,54 @@ QLineEdit#searchInput {
 }
 
 #selectedTable::item:selected {
-    background-color: #d9b382;
-    color: #1a1a1a;
+    background-color: #D3D9D4;
+    color: #212A31;
     border-radius: 8px;
 }
 
 QHeaderView::section {
-    background-color: #484848;
+    background-color: #124E66;
     padding: 6px;
     font-weight: bold;
-    color: #e0e0e0;
+    color: #D3D9D4;
     border: none;
-    border-bottom: 1px solid #666666;
+    border-bottom: 1px solid #748D92;
 }
 
 QWidget {
     font-family: 'Segoe UI', sans-serif;
     font-size: 13px;
-    color: #eeeeee;
+    color: #D3D9D4;
     background-color: transparent;
 }
 
 QPushButton#DetailsButton {
-    background-color: #6b6b35;
+    background-color: #124E66;
     border: none;
-    color: #f0f0f0;
+    color: #D3D9D4;
     padding: 8px 16px;
     border-radius: 4px;
     font-weight: bold;
 }
 
 QPushButton#DetailsButton:hover {
-    background-color: #868647;
+    background-color: #748D92;
+}
+
+QWidget {
+    background-color: #D3D9D4;  /* רקע בהיר רך */
+    color:#124E66
+}
+
+QFrame#courseTreeFrame {
+    border: 2px solid #124E66;
+    border-radius: 12px;
+    background-color: #748D92;
+}
+
+QTreeWidget#courseTree {
+    font-size: 14px;
+    alternate-background-color: #fdfdfd;
+    background-color: #ffffff;
+    border: none;
 }
