--- a/SRC/ViewLayer/Theme/modern_ui_base.qss
+++ b/SRC/ViewLayer/Theme/modern_ui_base.qss
@@ -1,25 +1,26 @@
-/* Shared Base Styles */
+/* === Shared Base Styles === */
 QWidget {
-    background-color:#f3efec;
-    color:rgb(45, 44, 44);
+    background-color: #f3efec;
+    color: #213555;
     font-family: "Segoe UI", sans-serif;
     font-size: 14px;
 }
 
 QPushButton {
     
+    color: white;
+    border: 2px solid #3E5879; 
     border-radius: 10px;
     padding: 6px 12px;
-    min-height: 30px;
     font-weight: bold;
 }
 
 QPushButton:hover {
-    background-color: #944e25;
+    background-color: #213555;
 }
 
 QLineEdit, QTextEdit, QComboBox {
-    border: 1px solid #ccc;
+    border: 1px solid #3E5879;
     border-radius: 6px;
     padding: 4px 8px;
     background-color: white;
@@ -33,9 +34,10 @@ QScrollBar:vertical, QScrollBar:horizontal {
 }
 
 QScrollBar::handle {
-    background: #bdc3c7;
+    background: #D8C4B6;
     border-radius: 4px;
 }
+
 #logoLabel {
     margin-top: 10px;
     margin-bottom: 10px;
