--- a/SRC/ViewLayer/Theme/modern_ui_base_dark.qss
+++ b/SRC/ViewLayer/Theme/modern_ui_base_dark.qss
@@ -1,5 +1,5 @@
 QWidget {
-    background-color: #D3D9D4;  /* רקע בהיר רך */
+    background-color: #f3efec;  /* רקע בהיר רך */
     color: #212A31;             /* טקסט כהה */
     font-family: "Segoe UI", sans-serif;
     font-size: 14px;
